@@ -26,6 +26,7 @@
 #
 
 
+import calendar
 import os
 import shutil
 import stat
@@ -1223,7 +1224,9 @@ class DistributionBranch(object):
                  import rfc822, time
                  time_tuple = rfc822.parsedate_tz(raw_timestamp)
                  if time_tuple is not None:
-                     timestamp = (time.mktime(time_tuple[:9]), time_tuple[9])
+                     timestamp = (calendar.timegm(
+                                  time_tuple[:9]) - time_tuple[9],
+                                  time_tuple[9])
                  author = safe_decode(cl.author)
             versions = self._get_safe_versions_from_changelog(cl)
             assert not self.has_version(version), \
