@@ -14,6 +14,8 @@ bzr-builddeb (2.8.8) UNRELEASED; urgency=low
   * quilt.py: quilt_unapplied should only return patch basenames regardless
     of whether or not QUILT_PATCHES_PREFIX is set. Fixes test failure with
     quilt > 0.63-2.
+  * import_dsc.py: Use calendar.timegm instead of time.mktime when importing
+    the timestamp. Thanks to Anders Kaseorg! (LP: #475983).
 
  -- Iain Lane <laney@debian.org>  Wed, 23 Oct 2013 10:52:50 +0100
 
